[gd_scene load_steps=10 format=3 uid="uid://r0yv7tny8sc8"]

[ext_resource type="PackedScene" uid="uid://cyavyrbpj6jjb" path="res://scenes/unit/unit.tscn" id="1_xa7el"]
[ext_resource type="Script" uid="uid://cm81pfwdbi3ho" path="res://scenes/unit/players/player.gd" id="2_0kki1"]
[ext_resource type="Texture2D" uid="uid://cproxhccob85g" path="res://assets/sprites/Players/Player_1.png" id="3_ht2l1"]
[ext_resource type="Resource" uid="uid://dlsijaffps5qh" path="res://resouce/unit/players/stats_player_well_rounded.tres" id="3_viu20"]
[ext_resource type="Script" uid="uid://c0mirjaxbhe0q" path="res://scenes/unit/players/trail.gd" id="5_ht2l1"]
[ext_resource type="Script" uid="uid://3xhc8o3yr61w" path="res://scenes/unit/players/weapon_container.gd" id="6_viu20"]

[sub_resource type="Curve" id="Curve_0kki1"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_g8n7m"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_20xkg"]
radius = 32.01562

[sub_resource type="Gradient" id="Gradient_1"]
colors = PackedColorArray(1, 1, 1, 0.8, 1, 1, 1, 0.0)
offsets = PackedFloat32Array(0, 1)

[node name="PlayerWellRound" instance=ExtResource("1_xa7el")]
collision_mask = 2
script = ExtResource("2_0kki1")
dash_duration = 0.5
dash_speed_multi = 2.0
dash_cooldown = 3.0
stats = ExtResource("3_viu20")

[node name="Trail" type="Line2D" parent="Visuals" index="0" node_paths=PackedStringArray("player")]
unique_name_in_owner = true
top_level = true
position = Vector2(0, -29)
width = 35.0
width_curve = SubResource("Curve_0kki1")
script = ExtResource("5_ht2l1")
player = NodePath("../..")

[node name="Shadow" parent="Visuals" index="1"]
z_index = 1

[node name="Sprite" parent="Visuals" index="2"]
z_index = 1
texture = ExtResource("3_ht2l1")

[node name="CollisionShape2D" parent="." index="1"]
z_index = 1
position = Vector2(1, -35)
shape = SubResource("CircleShape2D_g8n7m")

[node name="WeaponContainer" type="Node2D" parent="." index="3"]
script = ExtResource("6_viu20")

[node name="One" type="Node2D" parent="WeaponContainer" index="0"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/One" index="0"]
position = Vector2(0, -15)

[node name="Two" type="Node2D" parent="WeaponContainer" index="1"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Two" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Two" index="1"]
position = Vector2(-40, 20)

[node name="Three" type="Node2D" parent="WeaponContainer" index="2"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Three" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Three" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Three" index="2"]
position = Vector2(0, -115)

[node name="Four" type="Node2D" parent="WeaponContainer" index="3"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Four" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Four" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Four" index="2"]
position = Vector2(40, -115)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Four" index="3"]
position = Vector2(-40, -115)

[node name="Five" type="Node2D" parent="WeaponContainer" index="4"]
visible = false

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Five" index="0"]
position = Vector2(40, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Five" index="1"]
position = Vector2(-40, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Five" index="2"]
position = Vector2(60, -40)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Five" index="3"]
position = Vector2(-60, -40)

[node name="Marker2D5" type="Marker2D" parent="WeaponContainer/Five" index="4"]
position = Vector2(0, -115)

[node name="Six" type="Node2D" parent="WeaponContainer" index="5"]

[node name="Marker2D" type="Marker2D" parent="WeaponContainer/Six" index="0"]
position = Vector2(35, 20)

[node name="Marker2D2" type="Marker2D" parent="WeaponContainer/Six" index="1"]
position = Vector2(-35, 20)

[node name="Marker2D3" type="Marker2D" parent="WeaponContainer/Six" index="2"]
position = Vector2(35, -115)

[node name="Marker2D4" type="Marker2D" parent="WeaponContainer/Six" index="3"]
position = Vector2(-35, -115)

[node name="Marker2D5" type="Marker2D" parent="WeaponContainer/Six" index="4"]
position = Vector2(60, -45)

[node name="Marker2D6" type="Marker2D" parent="WeaponContainer/Six" index="5"]
position = Vector2(-60, -45)

[node name="DashTimer" type="Timer" parent="." index="4"]

[node name="DashCooldwnTimer" type="Timer" parent="." index="5"]

[node name="TrailTimer" type="Timer" parent="." index="6"]
unique_name_in_owner = true
one_shot = true

[node name="DashSmoke" type="CPUParticles2D" parent="Visuals" index="3"]
unique_name_in_owner = true
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
direction = Vector2(0, -1)
spread = 45.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector2(0, -50)
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(1, 1, 1, 0.6)
color_ramp = SubResource("Gradient_1")

[node name="HurtboxComponent" parent="." index="7"]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
z_index = 1
position = Vector2(0, -36)
shape = SubResource("CircleShape2D_20xkg")

[node name="HealthBar" parent="." index="9"]
back_color = Color(0.13725491, 0.019607844, 0.02745098, 1)
fill_color = Color(1, 0.2901961, 0.45490196, 1)

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="Visuals/Trail" method="_on_trail_timer_timeout"]
[connection signal="on_health_changed" from="HealthComponent" to="HealthBar" method="_on_health_component_on_health_changed"]
